Chore: Commenting out media and static directories in .gitignore
Commenting out media and static directories in .gitignore to enable tracking for deployment and user uploads for learning purposes.

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ recipeapp/
 Thumbs.db
 
 # Django media and static files
-src/media/
-src/static/
+# src/media/  # Commented out for learning - user uploads will be tracked
+# src/static/  # Commented out to allow static files for deployment
 
 # Coverage reports
 htmlcov/
