--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --watch",
-    "build-prod": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --minify",
-    "dev": "browser-sync start --proxy localhost:8000 --files 'src/**/*.html, src/**/*.py, src/static/css/output.css' --no-notify"
+    "build-prod": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --minify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
-    "browser-sync": "^3.0.4",
     "tailwindcss": "^3.4.17"
   }
 }
