--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --watch",
-    "build-prod": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --minify"
+    "dev": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --watch",
+    "build": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css",
+    "build-prod": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --minify",
+    "build-django": "./build.sh",
+    "dev-django": "./dev.sh",
+    "clean": "rm -f ./src/static/css/output.css ./src/staticfiles/css/output.css",
+    "check": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --dry-run"
   },
   "keywords": [],
   "author": "",
