--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --watch",
-    "build": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css",
-    "build-prod": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --minify",
-    "build-django": "./build.sh",
-    "dev-django": "./dev.sh",
-    "clean": "rm -f ./src/static/css/output.css ./src/staticfiles/css/output.css",
-    "check": "tailwindcss -i ./src/static/css/input.css -o ./src/static/css/output.css --dry-run"
+    "build": "tailwindcss -i src/static/css/input.css -o src/static/css/output.css --minify",
+    "dev": "tailwindcss -i src/static/css/input.css -o src/static/css/output.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
+    "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3.4.17"
   }
 }
