--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-Django>=5.2.5
-Pillow>=11.3.0
-pandas>=2.0.0
-matplotlib>=3.7.0
-python-dotenv>=1.0.0
+Django==5.2.5
+Pillow==11.3.0
+pandas==2.3.2
+matplotlib==3.10.6
+python-dotenv==1.1.1
 gunicorn>=21.2.0
-django-browser-reload>=1.18.0
+django-browser-reload==1.18.0
+django-widget-tweaks==1.5.0
+asgiref==3.9.1
+numpy==2.3.3
