--- a/render.yaml
+++ b/render.yaml
@@ -17,7 +17,7 @@ services:
       - key: DEBUG
         value: False
       - key: ALLOWED_HOSTS
-        value: your-app-name.onrender.com
+        value: cf-recipe-app.onrender.com
       - key: SECURE_SSL_REDIRECT
         value: True
       - key: SECURE_HSTS_SECONDS
